Checking if app has some updates available during Splash Screen

--- a/SambalpurAndroidApp/app/src/main/AndroidManifest.xml
+++ b/SambalpurAndroidApp/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity android:name=".Festival"
             android:label="Festivals">
         </activity>
+
+        <activity android:name=".UpdateActivity"></activity>
+
     </application>
 
 </manifest>
