--- a/SambalpurAndroidApp/app/build.gradle
+++ b/SambalpurAndroidApp/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile files('libs/picasso-2.5.2.jar')
+    compile files('libs/bolts-android-1.2.1.jar')
+    compile files('libs/Parse-1.8.0.jar')
 }
