Added Shoping list and details along with some Models

--- a/SambalpurAndroidApp/app/src/main/AndroidManifest.xml
+++ b/SambalpurAndroidApp/app/src/main/AndroidManifest.xml
@@ -62,6 +62,18 @@
                 android:value=".FestivalActivity" />
         </activity>
 
+        <activity android:name=".ShopActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
+        <activity android:name=".ShopDetailActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ShopActivity" />
+        </activity>
+
         <activity android:name=".UpdateActivity"
             android:label="Update your app">
             <meta-data
